# To-do-list

./: AGENTS.md
backend/: .gitignore  README.md  pyproject.toml
backend/app/: auth.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  tags.py  tasks.py
backend/tests/: conftest.py  test_auth.py  test_auth_protection.py  test_tags.py  test_task_filters.py  test_tasks.py
frontend/: SPEC.md
